added new feature

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <p>this is my new repo on my local host</p>
+    <p>this is my new feature as feature1</p>
     
 </body>
 </html>
