--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>this is my new repo on my local host</p>
-    <p>this is my new feature as feature1</p>
+    <p>this is my new feature as feature1(add button to main)</p>
     
 </body>
 </html>
